--- a/Assignment1/index.html
+++ b/Assignment1/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>cc-react-training</title>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
+    <body>
+     <h1>First Session Exercise</h1>  
+     <p>In the First session we have seen the <strong>python</strong> install and 
+        a simple HTTP server by running command python -m http. server HTML and CSS.
+        The exercise contains basic html structure contains heading, paragraph and a list of Ordered elements</p>
+     <h2>Today's Training Agenda</h2>
 
+     <h4>The orderd list type attributes</h4>
+
+     <ol type="I">
+          <li>Mandotory tools </li>
+          <li>Brief of Client - server</li>
+          <li>Setting up a simple Server using python</li>    
+          <li>HTML Attributes</li>      
+          <li>CSS basics</li>
+          <li>Document</li>
+          <li>Adding CSS to Documents</li> 
+     </ol>
+    </body>
+</html>
