--- a/Assignment2/video.html
+++ b/Assignment2/video.html
@@ -30,7 +30,7 @@ h1 {
             <h1>Videoplay</h1>
            <video controls width="300" height="300"
        autoplay loop muted preload="auto">
-  <source src="D:\cc-react-training\structure/video.mp4" type="video/mp4">
+  <source src="D:\cc-react-training\video.mp4" type="video/mp4">
 </video>
     </body>
 </html>
